@@ -3,27 +3,44 @@ package valid
 import (
 	"errors"
 	"fmt"
+	"github.com/dreamlu/gt/crud/dep/cons"
 	tErr "github.com/dreamlu/gt/src/type/errors"
+	"strings"
 )
 
-// Ruler ruler
-type Ruler func(rule string, data any) error
-
-// RuleChain rule chain
-// 设计模式--职责链模式,数组/map
-type RuleChain map[string]Ruler
-
-// 设计模式--单例模式[饿汉式]
-var defaultRules RuleChain
-
-func init() {
-	defaultRules = map[string]Ruler{}
-	addDefaultRuler()
+type Rule struct {
+	// key
+	Key string
+	// 翻译后的字段名
+	// default Key
+	Trans string
+	// valid
+	Valid string
 }
 
-// AddRuler add ruler
-func AddRuler(key string, ruler Ruler) {
-	defaultRules[key] = ruler
+// Check rule common rule Check
+func (n *Rule) Check(data any) (err error) {
+	// required
+	if !strings.Contains(n.Valid, RuleRequired) && data == "" {
+		return
+	}
+
+	//  split rule
+	rules := strings.Split(n.Valid, cons.GtComma)
+	if n.Trans == "" {
+		n.Trans = n.Key
+	}
+	for _, v := range rules {
+		param := strings.Split(v, "=")
+		rule := ""
+		if length(param) > 1 {
+			rule = param[1]
+		}
+		if err = n.rule(param[0], rule, data); err != nil {
+			return err
+		}
+	}
+	return nil
 }
 
 func (n *Rule) rule(key, rule string, data any) error {
